<resources>
    <string name="app_name">Wattoruwa</string>
    <string name="delete">delete item</string>
    <string name="save">save item</string>
    <string name="action_button_desc">foo</string>
    <string name="juice_name">Juice</string>
    <string name="main_juice_card_description">Juice Section</string>
    <string name="curry_name">Curry</string>
    <string name="main_curry_card_description">Curry Section</string>
    <string name="sweet_name">Sweet</string>
    <string name="main_sweet_card_description">Sweet Section</string>
    <string name="snack_name">Snack</string>
    <string name="main_snack_card_description">Snack Section</string>
    <string name="juice_two_name">Name of Juice</string>
    <string name="juice_card_two_description">Juice Two</string>
    <string name="curry_two_name">Name of Curry</string>
    <string name="curry_card_two_description">Curry Two</string>
    <string name="sweet_two_name">Name of Sweet</string>
    <string name="sweet_card_two_description">Sweet Two</string>
    <string name="snack_two_name">Name of Snack</string>
    <string name="snack_card_two_description">Snack Two</string>
    <string name="form_name">Type a Name</string>
    <string name="form_steps">Type steps</string>
    <string name="form_ingredients">Type ingredients</string>

    <string name="form_user_name">Type Your Name</string>
    <string name="form_food_name">Type Name of Food</string>
    <string name="form_food_description">Type Description</string>
    <string name="food_request_name">Recipe Request</string>
    <string name="food_request_food_name">Taco Meat</string>
    <string name="food_request_description">This recipe makes just the taco meat. You have to buy everything else, of course. Make a big batch and use for a multiple of different meals: add to bean burritos for a more hearty and tasty burrito, or add a can of beans (kidney, red, or pinto) and use for Frito® Pie, Navajo tacos, or taco salad. </string>
    <string name="food_request_user_name">Natalie</string>

    <string name="delivery_name">Delivery</string>
    <string name="delivery_address">Type address</string>
    <string name="delivery_unit_price">Unit price</string>
    <string name="delivery_example_price">Rs. 350/=</string>
    <string name="delivery_example_name">Potato Chips</string>

    <string name="delivery_example_address">33/A Athurugiriya Rd, Pannipitiya 10230</string>
    <string name="rs_1080">Rs. 1080/=</string>
    <string name="count">Count:</string>
    <string name="buy">Buy</string>

    <string name="rent_name">Rent</string>
    <string name="hourly_rental">Hourly Rental</string>
    <string name="type_items">Type items</string>
    <string name="buffet_sets">Buffet Sets</string>
    <string name="hours">Hours</string>
    <string name="rs_5160">Rs. 5160/=</string>

    <string name="form_steps_ingredients_text_input_height">130dp</string>
    <string name="action_gallery_only">Pick a Photo</string>

    <string name="recipes">Recipes</string>

    <string name="number_picker_formatter">%02d</string>

    <!-- Font -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

</resources>