<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/nexter"
            app:menu="@menu/nexter_menu_items"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/juice_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/juice_form_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/form_name"
        app:layout_constraintBottom_toTopOf="@+id/juice_form_steps"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/juice_form_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:height="@string/form_steps_ingredients_text_input_height"
        android:hint="@string/form_steps"
        app:layout_constraintBottom_toTopOf="@+id/juice_form_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/juice_form_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/juice_form_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:height="@string/form_steps_ingredients_text_input_height"
        android:hint="@string/form_ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/juice_form_steps" />

</androidx.constraintlayout.widget.ConstraintLayout>