<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/curry_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/juice"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/text_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_request_food_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_request_description"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/food_request_user_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/yellow_600"
            android:textSize="13sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>